<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        tools:context=".autenticazione.RecuperoPasswordActivity"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dark_green">

    <ImageView
            android:layout_width="310dp"
            android:layout_height="100dp" app:srcCompat="@drawable/logo_large" android:id="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.028"
            app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/invia"
            android:layout_width="171dp"
            android:layout_height="wrap_content" android:id="@+id/btnInvia"
            android:background="@drawable/btn_bg" android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputRecupero"
            app:layout_constraintBottom_toTopOf="@+id/btnIndietro" app:layout_constraintVertical_bias="0.638"/>
    <Button
            android:text="@string/indietro"
            android:layout_width="171dp"
            android:layout_height="wrap_content" android:id="@+id/btnIndietro"
            android:background="@drawable/btn_bg" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="164dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInvia"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/InputRecupero"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:hint="@string/email"
            android:textColorHint="@color/white" android:textColor="@color/white"
            android:background="@drawable/input_bg" android:paddingLeft="20dp" android:paddingTop="10dp"
            android:paddingRight="20dp" android:paddingBottom="10dp"
            android:drawableLeft="@drawable/ic_email" android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/InfoPt2"
            app:layout_constraintBottom_toTopOf="@+id/btnInvia"/>
    <TextView
            android:text="@string/info1"
            android:layout_width="294dp"
            android:layout_height="39dp" android:id="@+id/InfoRecPass"
            android:textSize="30sp" android:textStyle="bold" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintBottom_toTopOf="@+id/InfoPt2" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/InfoPt2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="22sp" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/InputRecupero"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/InfoRecPass"/>

</androidx.constraintlayout.widget.ConstraintLayout>