<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@drawable/bg">
    <ImageView
            android:layout_width="310dp"
            android:layout_height="100dp" app:srcCompat="@drawable/logo_large" android:id="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.003"
            app:layout_constraintHorizontal_bias="0.495"/>
    <TextView
            android:text="@string/login_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/TitileReg"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.074"
            android:textSize="37sp" android:textStyle="bold" android:textAlignment="center"
            android:textColor="@color/white" app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/InputLastname"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:hint="@string/email"
            android:textColorHint="@color/white" android:textColor="@color/white"
            android:background="@drawable/input_bg" android:paddingLeft="20dp" android:paddingTop="10dp"
            android:paddingRight="10dp" android:paddingBottom="10dp"
            android:drawableLeft="@drawable/ic_email" android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TitileReg"
            app:layout_constraintBottom_toTopOf="@+id/InputPassword"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/InputPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:hint="@string/password"
            android:textColorHint="@color/white" android:textColor="@color/white"
            android:background="@drawable/input_bg" android:paddingLeft="20dp" android:paddingTop="10dp"
            android:paddingRight="10dp" android:paddingBottom="10dp"
            android:drawableLeft="@mipmap/baseline_password_white_24" android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="304dp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/InputLastname"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnLogin" tools:layout_editor_absoluteY="361dp"
            app:layout_constraintStart_toStartOf="@+id/InputPassword"
            app:layout_constraintEnd_toEndOf="@+id/InputPassword" android:textSize="20sp"
            android:background="@drawable/btn_bg" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/non_ho_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/NonHoAccount"
            app:layout_constraintStart_toStartOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            android:textSize="20sp" android:textStyle="bold" app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>